Fix contrast issue

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -26,3 +26,12 @@ body {
         color: black;
     }
 }
+
+.jss40 {
+    strong {
+        color: white;
+    }
+    svg {
+        fill: white;
+    }
+}
